5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1721_3063.log
== TEST (2019-05-02 18:29:14) 
-- CODE:

100="placa"
print(100)

-- ERROR:
File "XXXX", line 2
    100="placa"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:30:04) 
-- CODE:

100="placa"
print(100)

-- EXECUTION TIME:
0.167042
-- ERROR:
  File "/home/codebench/codes/1721/3063/main.py", line 2
    100="placa"
    ^
SyntaxError: can't assign to literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:30:05) 
-- CODE:

100="placa"
print(100)

-- ERROR:
File "XXXX", line 2
    100="placa"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:30:28) 
-- CODE:

"100"="placa"
print(100)

-- ERROR:
File "XXXX", line 2
    "100"="placa"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:30:29) 
-- CODE:

"100"="placa"
print(100)

-- ERROR:
File "XXXX", line 2
    "100"="placa"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:30:30) 
-- CODE:

"100"="placa"
print(100)

-- ERROR:
File "XXXX", line 2
    "100"="placa"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:30:44) 
-- CODE:

100="placa"
print("100")

-- ERROR:
File "XXXX", line 2
    100="placa"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:30:45) 
-- CODE:

100="placa"
print("100")

-- ERROR:
File "XXXX", line 2
    100="placa"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:30:46) 
-- CODE:

100="placa"
print("100")

-- EXECUTION TIME:
0.139057
-- ERROR:
  File "/home/codebench/codes/1721/3063/main.py", line 2
    100="placa"
    ^
SyntaxError: can't assign to literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:30:46) 
-- CODE:

100="placa"
print("100")

-- ERROR:
File "XXXX", line 2
    100="placa"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:30:48) 
-- CODE:

100="placa"
print("100")

-- ERROR:
File "XXXX", line 2
    100="placa"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:30:53) 
-- CODE:

100=placa
print("100")

-- ERROR:
File "XXXX", line 2
    100=placa
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:30:55) 
-- CODE:

100=placa
print("100")

-- ERROR:
File "XXXX", line 2
    100=placa
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:39:15) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (P0>=200):
	print("interira")
else:
	("PO insuficiente")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    PO=float(input())
ValueError: could not convert string to float: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:29) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (P0>=200):
	print("interira")
	print((30*d)-20)
else:
	("PO insuficiente")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    PO=float(input())
ValueError: could not convert string to float: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:56) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("interira")
	print((30*d)-20)
else:
	("PO insuficiente")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    PO=float(input())
ValueError: could not convert string to float: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:44:14) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
elif(PO>50<200):
	print("MALHA")
	print((15*d)-1
else:
	("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:44:15) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
elif(PO>50<200):
	print("MALHA")
	print((15*d)-1
else:
	("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:44:27) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
elif(PO>50<200):
	print("MALHA")
	print((15*d)-1
else:
	("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:44:44) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
	if(PO>50<200):
		print("MALHA")
		print((15*d)-1
else:
	("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:45:13) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
	if(PO>50<200):
		print("MALHA")
		print((15*d)-1
	else:
		print("udud")
else:
	("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:45:14) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
	if(PO>50<200):
		print("MALHA")
		print((15*d)-1
	else:
		print("udud")
else:
	("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:45:34) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
	if(PO>50<200):
		print("MALHA")
		print((15*d)-1
	else:
		print("udud")
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:45:35) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
	if(PO>50<200):
		print("MALHA")
		print((15*d)-1
	else:
		print("udud")
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:45:58) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
elif(PO>50<200):
	print("MALHA")
	print((15*d)-1
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:45:59) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
elif(PO>50<200):
	print("MALHA")
	print((15*d)-1
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:46:01) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
elif(PO>50<200):
	print("MALHA")
	print((15*d)-1
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:48:17) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
elif(PO>50<200):
	print("MALHA")
	print((15*d)-1
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:48:19) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
elif(PO>50<200):
	print("MALHA")
	print((15*d)-1
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:48:24) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
elif(PO>50<200):
	print("MALHA")
	print((15*d)-1
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:48:24) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
elif(PO>50<200):
	print("MALHA")
	print((15*d)-1
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:48:25) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
elif(PO>50<200):
	print("MALHA")
	print((15*d)-1
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:48:25) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
elif(PO>50<200):
	print("MALHA")
	print((15*d)-1
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:48:25) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
elif(PO>50<200):
	print("MALHA")
	print((15*d)-1
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:48:26) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
elif(PO>50<200):
	print("MALHA")
	print((15*d)-1
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:48:32) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)

else:
	print("PO insuficiente")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    PO=float(input())
ValueError: could not convert string to float: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:49:57) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
	if(PO>50<200):
		print("MALHA")
		print((15*d)-1
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:49:58) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
	if(PO>50<200):
		print("MALHA")
		print((15*d)-1
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:50:11) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
	if(PO>50<200):
		print("MALHA")
		print((15*d)-1
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:50:17) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
	if(PO>50<200):
		print("MALHA")
		print((15*d)-1
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:50:38) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
else:
	print("PO insuficiente")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    PO=float(input())
ValueError: could not convert string to float: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:50:51) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
	if(PO>50<200):
		print("MALHA")
		print((15*d)-1
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:51:37) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
	if(PO>50<200):
		print("MALHA")
		print((15*d)-1
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:51:38) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
	if(PO>50<200):
		print("MALHA")
		print((15*d)-1
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:54:26) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
	if(PO>=50<100):
		print("MALHA")
		print((15*d)-1
	if(PO=100<200):
		print("PLACA")
		print(("20*d")-18)
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    if(PO=100<200):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:54:27) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
	if(PO>=50<100):
		print("MALHA")
		print((15*d)-1
	if(PO=100<200):
		print("PLACA")
		print(("20*d")-18)
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    if(PO=100<200):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:54:46) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
	if(PO>=50<100):
		print("MALHA")
		print((15*d)-1
	if(PO=100<200):
		print("PLACA")
		print(("20*d")-18)
	
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    if(PO=100<200):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:54:47) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
	if(PO>=50<100):
		print("MALHA")
		print((15*d)-1
	if(PO=100<200):
		print("PLACA")
		print(("20*d")-18)
	
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    if(PO=100<200):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:54:49) 
-- CODE:
d=int(input("fator de destreza:" ))
PO=float(input("preco em ouro:" ))
if (PO>=200):
	print("INTEIRA")
	print((30*d)-20)
	if(PO>=50<100):
		print("MALHA")
		print((15*d)-1
	if(PO=100<200):
		print("PLACA")
		print(("20*d")-18)
	
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    if(PO=100<200):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
